ensure content dropdown remains open when over gap between elements

--- a/src/components/Dropdowns/HoverDropdown/HoverDropdown.module.scss
+++ b/src/components/Dropdowns/HoverDropdown/HoverDropdown.module.scss
@@ -7,14 +7,11 @@
 
 .DropdownContentContainer {
 	position: absolute;
-	top: calc(100% + 2px);
+	top: 100%;
 	right: -1px;
 	display: none;
 	z-index: 1;
-}
-
-.Content {
-	margin-top: 4px;
+	padding-top: 8px;
 }
 
 .TriggerContentContainer:hover .DropdownContentContainer {
